--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "mail",
-    "version": "1.0.0",
+    "version": "1.1.0",
     "description": "",
     "main": "server.js",
     "scripts": {
@@ -11,6 +11,7 @@
     "author": "Makksaw",
     "license": "ISC",
     "dependencies": {
+        "dotenv": "^16.5.0",
         "express": "^5.1.0",
         "nodemailer": "^7.0.3"
     },
