--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
     "name": "mail",
     "version": "1.1.0",
-    "description": "",
+    "description": "MailTrap.io Website to send emails",
     "main": "server.js",
     "scripts": {
         "start": "node server",
